<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/play"
        android:layout_below="@id/highScoreTxt"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:alpha="0.7"
        android:background="@android:color/transparent"
        android:text="@string/play"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/highScoreTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/highScore"
        android:textColor="#000000"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:id="@+id/volumeCtrl"
        android:src="@drawable/ic_volume_up_black_24dp"/>


    <ImageView
        android:id="@+id/buttonPausePlay"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_pause_black_24dp"/>

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.7"
        android:background="@android:drawable/alert_light_frame"
        android:text="Go back"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="629dp"
        android:layout_marginBottom="293dp"
        android:background="@android:color/transparent"
        android:text="@string/settings"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textBoxLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="63dp"
        android:layout_marginTop="182dp"
        android:alpha="0.7"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/tapLeft"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textBoxRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.7"
        android:background="@android:drawable/alert_light_frame"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/tapRight"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp" />


</RelativeLayout>