<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-236dp">

        <TextView
            android:id="@+id/gameName"
            android:layout_width="387dp"
            android:layout_height="117dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="17dp"
            android:alpha="0.8"
            android:background="@android:drawable/alert_light_frame"
            android:fontFamily="monospace"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imgChicken"
            android:layout_width="154dp"
            android:layout_height="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="59dp"
            android:alpha="0.9"
            app:layout_constraintBottom_toTopOf="@+id/buttonPlay"
            app:layout_constraintEnd_toStartOf="@+id/imgBird"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameName"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bird_crash"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imgBird"
            android:layout_width="168dp"
            android:layout_height="138dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imgChicken"
            app:layout_constraintTop_toBottomOf="@+id/gameName"
            app:srcCompat="@drawable/bird"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonPlay"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:shadowColor="#FFFFFF"
            android:text="@string/play"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgBird"
            app:layout_constraintVertical_bias="0.18" />

        <Button
            android:id="@+id/buttonGoToRegister"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:text="@string/register"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/buttonHaveAccount"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/alert_light_frame"
            android:text="@string/haveAccount"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonGoToRegister"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>